overflow hidden on main to avoid swiping bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@ html,
 body {
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .container {
   max-width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
